[package]
name = "schema-utils"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["shared", "schema", "updatable", "bmc"]

[dev-dependencies]
trybuild = "1.0"
surrealdb = { version = "1.0.0-beta.8", default-features = false, features = [
  'parallel',
  'kv-mem',
] }

[dependencies]
shared = { version = "*", path = "./shared" }
schema = { version = "*", path = "./schema" }
updatable = { version = "*", path = "./updatable" }
bmc = { version = "*", path = "./bmc" }
