[package]
name = "shared"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"
proc-macro-error = "1.0"
surrealdb = { version = "1.0.0-beta.8", default-features = false, features = [
  'parallel',
  'kv-mem',
] }
thiserror = "1.0.37"
